// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note renders Sample 1`] = `
<body>
  <div>
    <aside
      class="Note_noteStyles_root__1s4zt5i0 Note_noteStyles_root_variant_note__1s4zt5i1"
    >
      <div
        class="Note_noteStyles_iconWrapper__1s4zt5i3 Note_noteStyles_iconWrapper_variant_note__1s4zt5i4"
      >
        <svg
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <div>
        サンプルテキスト
      </div>
    </aside>
  </div>
</body>
`;

exports[`Note renders Variants 1`] = `
<body>
  <div>
    <div>
      <aside
        class="Note_noteStyles_root__1s4zt5i0 Note_noteStyles_root_variant_note__1s4zt5i1"
      >
        <div
          class="Note_noteStyles_iconWrapper__1s4zt5i3 Note_noteStyles_iconWrapper_variant_note__1s4zt5i4"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div>
          Variant: Default
        </div>
      </aside>
      <aside
        class="Note_noteStyles_root__1s4zt5i0 Note_noteStyles_root_variant_warn__1s4zt5i2"
      >
        <div
          class="Note_noteStyles_iconWrapper__1s4zt5i3 Note_noteStyles_iconWrapper_variant_warn__1s4zt5i5"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div>
          Variant: Warn
        </div>
      </aside>
    </div>
  </div>
</body>
`;
